--- a/client/src/app/components/payment-component/payment-component.component.scss
+++ b/client/src/app/components/payment-component/payment-component.component.scss
@@ -64,3 +64,15 @@ html {
     height: 40px;
     box-shadow: 0 1px 3px 0 rgba(19, 57, 94, 0.2);
   }
+
+  .input-box-apms{
+    border: solid 1px #13395e;
+    border-radius: 3px;
+    width: 100%;
+    margin-bottom: 8px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-size: 14px;
+    height: 80px;
+    box-shadow: 0 1px 3px 0 rgba(19, 57, 94, 0.2);
+  }
